distributed workers: etcd k/v framework

--- a/watcher-python/Makefile
+++ b/watcher-python/Makefile
@@ -10,7 +10,7 @@ DOCKER_IMG := johnwang412/watcher-python
 package-app:
 	tar -cvf ${APP_PKG} ${APP_BASE_DIR}
 docker-img: package-app
-	docker build . -t ${DOCKER_IMG}:${VERSION}
+	docker build . -f Dockerfile.node -t ${DOCKER_IMG}:${VERSION}
 	docker tag ${DOCKER_IMG}:${VERSION} ${DOCKER_IMG}:latest
 	docker image prune -f
 	docker images --quiet --filter "dangling=true" | xargs docker rmi -f
