--- a/watcher-python/docker-compose.yml
+++ b/watcher-python/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   watcher-admin:
     image: johnwang412/watcher-python:latest
-    hostname: watcher-admin
+    hostname: watcher-node
     env-file:
       - watcher-admin.env
     networks:
@@ -14,6 +14,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
+        # todo: delay ok?
         delay: 20s
       update_config:
         parallelism: 1
